# ChangeLog for dev-ruby/riddle
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jan 2014; Hans de Graaff <graaff@gentoo.org> -riddle-1.5.6.ebuild,
  -riddle-1.5.7.ebuild, -riddle-1.5.8.ebuild:
  Cleanup.

*riddle-1.5.10 (22 Jan 2014)

  22 Jan 2014; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.10.ebuild:
  Version bump.

*riddle-1.5.9 (27 Nov 2013)

  27 Nov 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.9.ebuild:
  Version bump.

*riddle-1.5.8 (13 Sep 2013)

  13 Sep 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.8.ebuild:
  Version bump.

  13 Sep 2013; Hans de Graaff <graaff@gentoo.org> -riddle-1.5.3.ebuild,
  -riddle-1.5.4.ebuild:
  Cleanup.

*riddle-1.5.7 (24 Jul 2013)

  24 Jul 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.7.ebuild:
  Version bump.

*riddle-1.5.6 (21 Jun 2013)

  21 Jun 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.6.ebuild:
  Version bump.

*riddle-1.5.4 (11 Jan 2013)

  11 Jan 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.4.ebuild:
  Version bump.

  11 Jan 2013; Hans de Graaff <graaff@gentoo.org> -riddle-1.2.2.ebuild,
  -riddle-1.5.0.ebuild, -riddle-1.5.2.ebuild:
  Cleanup.

*riddle-1.5.3 (14 Sep 2012)

  14 Sep 2012; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.3.ebuild:
  Version bump.

*riddle-1.5.2 (08 Jun 2012)

  08 Jun 2012; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.2.ebuild:
  Version bump. Add ruby19.

  08 Jun 2012; Hans de Graaff <graaff@gentoo.org> -riddle-1.1.0.ebuild,
  -riddle-1.3.2.ebuild, -riddle-1.3.3.ebuild, -riddle-1.4.0.ebuild:
  Remove old versions.

*riddle-1.5.0 (28 Nov 2011)

  28 Nov 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.0.ebuild:
  Version bump.

  12 Oct 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.4.0.ebuild:
  Version bump.

*riddle-1.4.0 (12 Oct 2011)

  12 Oct 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.4.0.ebuild:
  Version bump.

*riddle-1.3.3 (01 Jul 2011)
