@@ -1,2 +1,3 @@
 DIST riddle-1.5.10.gem 1980928 SHA256 eed837ac65064d7c5fcc008d0d2c9f8914f59feeab87c9ae8e6ee6f6073aa268 SHA512 25e84d839b9551f9eb3eae9f9cd48d38987c0c8cfadec09e1b8fe3b060009100400db2e928fdf09abb1c0f94cf6c3ba94bb6fde36a70583563788433b5a56487 WHIRLPOOL b894186ba15a772ebe33d04450c94a6f884f94aca829657418e6e210435cc47a7fb5349b76f28073efd50901bc72601f95dcbb7dea7e3e50209c19b200c22184
+DIST riddle-1.5.11.gem 1981440 SHA256 1985bf3bac3db24f4da17966949a391a40791ecd3006cb2ba25fe335e732eede SHA512 4fe978034a4927763ee4ada6a258fecb25f399a3e437f06aa0ff450ef5f8da9e3bb9f4bfba4498f6a91885869aaf09c9f4397f0d3b6f35c89a0ff529a0e5c81e WHIRLPOOL 8964666a2d6754c9d96e60d38d1fa2c7a09f29aba947afaa3b36636d2fdf5ec1052e3450151c7f02c433a7f28077e7cf2dfbfd8547cd5dedf7a589c1729f104c
 DIST riddle-1.5.9.gem 1978880 SHA256 1419b988bf3738cffefad1a2d21c13e1691b8513dcce6f16c2988ff2d1ce4db3 SHA512 26b55ce5573ee735cfae515c89a2f9445f4a9630bb3815053940649080f086122260d3a9a6bc886553d28bd6ebdf58d0b9795501c97aed85444f95c3fae02079 WHIRLPOOL 40a883b5d717334a960995edfbd2adfa53536b88c1da9dabd71eaa9fe1ef50a45423457b242ad283ab967985765d0d6d489b592580cf36e10c77a813184c8f9a
